--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -120,10 +120,10 @@ textarea{
 .login-list .btn{
 	width: 100%;
 	height: 40px;
-	line-height: 40px;
+	line-height: 27px;
 	text-align: center;
 	background:#17b5a6;
-	font-size: 15px;
+	font-size: 20px;
 	color:#fff;
 	display: block;
 }
@@ -149,14 +149,14 @@ textarea{
 }
 .login-list .yzm2{
 	position: absolute;
-	right: 5px;
-	top: 3px;
+	right: 3px;
+	top: 1px;
 	cursor: pointer;
 
 }
 .login-list .yzm2 img{
-	width: 100px;
-	height: 32px;
+	width: 88px;
+	height: 36px;
 }
 
 .body_bj{
@@ -172,6 +172,39 @@ textarea{
 	padding: 0;
 	overflow: hidden;
 	height: 100%;
+}
+
+.error-msg {
+	border: 1px solid #e62538;
+	height: 22px;
+	line-height: 22px;
+	background-color: #ffeded;
+	padding-left: 40px;
+	margin: 10px 0;
+	color: #e62538;
+	opacity: 0;
+	filter: alpha(opacity=0);
+	transition-duration: .3s;
+	-webkit-transition-duration: .3s;
+	-moz-transition-duration: .3s;
+}
+
+.error-msg.show {
+	opacity: 1;
+	filter: alpha(opacity=100)
+}
+
+.error {
+	border: 1px solid #e62538!important;
+}
+
+.icon {
+	background-image: url('../images/login/icon.png');
+	background-repeat: no-repeat;
+}
+
+.icon-error {
+	background-position: 16px -1247px;
 }
 
 
