完善公司动态，媒体报道，公司公告

--- a/src/main/webapp/static/dynajs/css/shenluehao.css
+++ b/src/main/webapp/static/dynajs/css/shenluehao.css
@@ -4,13 +4,6 @@
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
-.product-buyer-name {
-	max-width: none;
-	max-height: 200px;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
 .text_overflow{
 	width:320px;
 	white-space:nowrap;
@@ -19,3 +12,21 @@
 	overflow:hidden;
 }
 .wth{width:150px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;course:hand;}
+.product-buyer-name {
+	max-width: 110px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.container{
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+}
+.container.fold{
+	-webkit-line-clamp: 3 ;
+}
+.container.unfold{
+	-webkit-line-clamp: 100;
+}
