--- a/src/main/webapp/static/css/index/index.css
+++ b/src/main/webapp/static/css/index/index.css
@@ -799,7 +799,7 @@
 
 .news-main .news-main-right .news-main-list>li {
     height: 16px;
-    background: url(../images/icon.png) left -792px no-repeat;
+    background: url(../images/index/icon.png) left -792px no-repeat;
     padding-left: 15px;
     margin-bottom: 15px;
 }
@@ -1723,7 +1723,7 @@
     width: 78px;
     height: 40px;
     border: 1px solid #d9d9d9;
-    background-image: url(../images/icon.png);
+    background-image: url(../images/index/icon.png);
     background-repeat: no-repeat;
     background-position: 10px -2215px;
     background-color: #fff;
@@ -1951,7 +1951,7 @@
     width: 100%;
     height: 655px;
     overflow: hidden;
-    background: url(../images/item2.png) top center no-repeat;
+    background: url(/static/images/index/item2.png) top center no-repeat;
 }
 
 .safety .item-two .item-title,
@@ -1991,12 +1991,12 @@
 }
 
 .safety .item-two .center>div.part1>div.left {
-    background: url(../images/item1-part1.png) center center no-repeat;
+    background: url(../images/index/item1-part1.png) center center no-repeat;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
 .safety .item-two .center>div.part2>div.left {
-    background: url(../images/item2-part2.png) center center no-repeat;
+    background: url(../images/index/item2-part2.png) center center no-repeat;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -2022,21 +2022,21 @@
     width: 100%;
     height: 746px;
     overflow: hidden;
-    background: url(../images/item4.png) top center no-repeat;
+    background: url(/static/images/index/item4.png) top center no-repeat;
 }
 
 .safety .item-four .center>div.part1>div.left {
-    background: url(../images/item4-part1.png) center center no-repeat;
+    background: url(/static/images/index/item4-part1.png) center center no-repeat;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
 .safety .item-four .center>div.part2>div.left {
-    background: url(../images/item4-part2.png) center center no-repeat;
+    background: url(/static/images/index/item4-part2.png) center center no-repeat;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
 .safety .item-four .center>div.part3>div.left {
-    background: url(../images/item4-part3.png) center center no-repeat;
+    background: url(/static/images/index/item4-part3.png) center center no-repeat;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -2080,19 +2080,19 @@
 }
 
 .safety .item-five .item-content .part1 .left {
-    background: url(../images/item5-part1.png) center center no-repeat;
+    background: url(/static/images/index/item5-part1.png) center center no-repeat;
 }
 
 .safety .item-five .item-content .part2 .left {
-    background: url(../images/item5-part2.png) center center no-repeat;
+    background: url(/static/images/index/item5-part2.png) center center no-repeat;
 }
 
 .safety .item-five .item-content .part3 .left {
-    background: url(../images/item5-part3.png) center center no-repeat;
+    background: url(/static/images/index/item5-part3.png) center center no-repeat;
 }
 
 .safety .item-five .item-content .part4 .left {
-    background: url(../images/item5-part4.png) center center no-repeat;
+    background: url(/static/images/index/item5-part4.png) center center no-repeat;
 }
 
 .safety .item-five .item-content>div>.right {
@@ -2114,7 +2114,7 @@
     width: 100%;
     height: 512px;
     overflow: hidden;
-    background: url(../images/item6.png) top center no-repeat;
+    background: url(/static/images/index/item6.png) top center no-repeat;
 }
 
 .safety .item-six .item-content .part1>div {
@@ -2136,7 +2136,7 @@
 }
 .safety .item-six .item-content .center>div .left {
     width: 260px;
-    background: url(../images/item6-part1.png) center center no-repeat;
+    background: url(/static/images/index/item6-part1.png) center center no-repeat;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -2289,7 +2289,7 @@
 .board{
 	width:100%;
 	height:1596px;
-	background:url(../images/board-a.jpg) no-repeat top center;
+	background:url(../images/index/board-a.jpg) no-repeat top center;
 	padding-top:440px;
 }
 .board .content{
