添加银行接口和申请借款页面 修修改改

--- a/src/main/webapp/static/css/index/index.css
+++ b/src/main/webapp/static/css/index/index.css
@@ -1358,10 +1358,10 @@
     width: 120px;
     height: 1px;
     position: absolute;
-    top: 60px;
-    left: 40px;
+    /*top: 60px;*/
+    /*left: 40px;*/
     z-index: 1;
-    background-color: #e62538;
+    /*background-color: #e62538;*/
 }
 
 
